NetBSD Problem Report #54037
From gson@gson.org Sun Mar 3 11:24:46 2019
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id DFB6B7A1AE
for <gnats-bugs@gnats.NetBSD.org>; Sun, 3 Mar 2019 11:24:45 +0000 (UTC)
Message-Id: <20190303112443.0436298B726@guava.gson.org>
Date: Sun, 3 Mar 2019 13:24:43 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: pmax reports module errors on boot
X-Send-Pr-Version: 3.95
>Number: 54037
>Category: port-pmax
>Synopsis: pmax reports module errors on boot
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: pgoyette
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Mar 03 11:25:00 +0000 2019
>Closed-Date: Mon Mar 04 15:39:00 +0000 2019
>Last-Modified: Mon Mar 04 15:39:00 +0000 2019
>Originator: Andreas Gustafsson
>Release: NetBSD-current, source date 2019.03.02.16.55.13
>Organization:
>Environment:
Architecture: mips
Machine: pmax
>Description:
Booting NetBSD-current/pmax in qemu, the following errors are reported:
[ 1.0937580] WARNING: module error: built-in module compat_ultrix can't find builtin dependency `compat'
[ 1.0937580] WARNING: module error: built-in module compat_ultrix prerequisite compat failed, error 2
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: port-pmax-maintainer->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Sun, 03 Mar 2019 20:44:43 +0000
Responsible-Changed-Why:
Probably mine (fall-out from merge of [pgoyette-compat] branch)
From: Andreas Gustafsson <gson@gson.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: port-pmax/54037: pmax reports module errors on boot
Date: Sun, 3 Mar 2019 23:28:16 +0200
Earlier today, I wrote:
> Booting NetBSD-current/pmax in qemu,
Sorry, I meant gxemul, not qemu.
--
Andreas Gustafsson, gson@gson.org
State-Changed-From-To: open->feedback
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sun, 03 Mar 2019 22:27:51 +0000
State-Changed-Why:
Fix committed. Please verify. Thanks!
From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54037 CVS commit: src/sys/compat/ultrix
Date: Sun, 3 Mar 2019 22:25:01 +0000
Module Name: src
Committed By: pgoyette
Date: Sun Mar 3 22:25:00 UTC 2019
Modified Files:
src/sys/compat/ultrix: ultrix_mod.c
Log Message:
Fix the required-list for compat_ultrix. With the merge of the
[pgoyette-compat] branch there is no longer a "compat" module;
instead we have lots of version-specific compat_xx modules.
Code inspection shows compat_ultrix uses compat_13 (and newer)
stuff, so set the requirements list accordingly.
Should fix PR port-pmax/54037
To generate a diff of this commit:
cvs rdiff -u -r1.5 -r1.6 src/sys/compat/ultrix/ultrix_mod.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: feedback->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Mon, 04 Mar 2019 15:39:00 +0000
State-Changed-Why:
I can confirm that the error messages are now gone. Thanks to pgoyette for fixing it.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.