Fix the required-list for compat_ultrix.  With the merge of the [pgoyette-compat] branch there is no longer a "compat" module; instead we have lots of version-specific compat_xx modules.

Code inspection shows compat_ultrix uses compat_13 (and newer)
stuff, so set the requirements list accordingly.

Should fix PR port-pmax/54037